# unicesumar-aula3-estrutura-de-dados

./: .gitignore  CMakeLists.txt  main.c  readme.md
alocacao_dinamica/: ex1_malloc.c  ex2_calloc.c  ex3_realloc.c
alocacao_dinamica_vetor/: ex4_notas.c  ex5_matriz.c  ex6_registro.c  ex7_comparacao_memoria.c
